# Aeolus

./: .env.example  .gitignore  Makefile  Procfile  README.md  gunicorn.conf.py  logger.py  pyproject.toml  redis_client.py  server.py  settings.py
api/: routes.py
events/: socket.py
main/: config.py  redis.py
main/events/: socket.py
src/aeolus/: __init__.py  app.py  settings.py  utils.py
src/aeolus/api/: __init__.py  handlers.py
src/aeolus/events/: __init__.py  handlers.py
tests/: conftest.py  factories.py  test_multiworker.py  test_routes.py  test_socket.py
